# Black-Ice-Engine

./: Cargo.toml  README.md  build.sh
.obsidian/: workspace.json
docs/: asset_setup.md
src/: libs.rs  main.rs
src/black_ice/common/: angles.rs  materials.rs  matrices.rs  mesh.rs  mod.rs  textures.rs  transform.rs  vertex.rs
src/black_ice/common/components/: component_system.rs  mod.rs
src/black_ice/common/components/entity/: camera_component.rs  entity_system.rs  image_component.rs  mesh_component.rs  mod.rs
src/black_ice/common/engine/: asset_mgr.rs  engine_server.rs  event_system.rs  gamesys.rs  input.rs  mod.rs  opengl.rs  pipeline.rs  threading.rs  vulkan.rs
src/black_ice/common/engine/asset_types/: .texture.rs.kate-swp  materials.rs  mod.rs  shader_asset.rs  texture.rs
src/black_ice/common/filesystem/: files.rs
src/common/: angles.rs  materials.rs  matrices.rs  mesh.rs  mod.rs  textures.rs  transform.rs  vertex.rs
src/common/components/: component_system.rs  mod.rs
src/common/components/entity/: camera_component.rs  entity_system.rs  image_component.rs  mesh_component.rs  meshcomponent.rs  mod.rs
src/common/engine/: event_system.rs  gamesys.rs  input.rs  mod.rs  opengl.rs  pipeline.rs  threading.rs  vulkan.rs
src/common/filesystem/: files.rs
