[package]
name = "black-ice"
version = "0.1.0"
edition = "2021"
authors = ["Detrixukoan58"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="black_ice_lib"
version ="0.1.0"
path="src/libs.rs"
crate-type = ["cdylib"]

[[bin]]
name = "black_ice_executable"
path = "src/main.rs"

[dependencies]
bytemuck = "1"
ogl33 = {version = "0.2.0", optional = true}
gl46 = {version = "*", optional =  true}
ash = {version = "0.37.3+1.3.251", optional = true}
ash-window = {version ="0.12.0", optional = true}
shaderc = {version = "0.8"}
opengles = {version = "0.1.2", optional = true}
sdl2 = { version = "*"}
winit = { version = "0.28.6"}
raw-window-handle = "0.5"
imagine = "0.5.1"
once_cell = "1.17.0"
glsl-include = "0.3"
glsl = "*"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json ={  version = "*"}
async-trait = {version = "*"}
futures = { version = "*", features = ["thread-pool"] }
bitmask-enum = { version = "*"}
colored = { version = "*"}
cgmath = {version = "*"}
parking_lot = {version = "*"}

[features]
vulkan = ["dep:ash", "dep:ash-window", "sdl2/raw-window-handle"]
opengl = ["dep:ogl33", "dep:gl46"]
gles = ["dep:opengles"]